[package]
name = "rustyochestrator"
version = "0.1.0"
edition = "2024"
description = "A high-performance modular, open-source CI/CD ochestrator and pipeline runner with parallel execution and smart caching."
license = "MIT"
repository = "https://github.com/KodeSage/rustyochestrator"
homepage = "https://github.com/KodeSage/rustyochestrator"
documentation = "https://github.com/KodeSage/rustyochestrator#readme"
keywords = ["ci", "cd", "pipeline", "build", "automation"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [".github", "examples", ".rustyochestrator"]

[[bin]]
name = "rustyochestrator"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
clap         = { version = "4",    features = ["derive"] }
serde        = { version = "1",    features = ["derive"] }
serde_yaml   = "0.9"
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror    = "1"
sha2         = "0.10"
hex          = "0.4"
num_cpus     = "1"
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs         = "5"

